syntax = "proto3";

option go_package = "api/protobuf-spec/bifrostpb";
package bifrostpb;  // 服务名

service ViewService { // Viewer
  rpc View(ViewRequest) returns (stream BytesResponse) {}
}

service UpdateService { // Updater
  rpc Update(stream UpdateRequest) returns (ErrorResponse) {}
}

service WatchService { // Watcher
  rpc Watch(stream WatchRequest) returns (stream BytesResponse) {}
}

message ViewRequest {
  string ViewType = 1;
  string ServerName = 2;
  string Token = 3;
}

message UpdateRequest {
  string UpdateType = 1;
  string ServerName = 2;
  string Token = 3;
  bytes Data = 4;
}

message WatchRequest {
  string WatchType = 1;
  string ServerName = 2;
  string Token = 3;
  string WatchObject = 4;
}

message BytesResponse {
  bytes Ret = 1;
  string Err = 2;
}

message ErrorResponse {
  string Err = 1;
}